# setix-sdk

./: .gitignore  .sync-manifest.json  CLAUDE.md  README.md  SECURITY.md
.githooks/: pre-commit
.github/workflows/: publish-npm.yml  publish-pypi.yml  sigstore.yml
ops/: anchor.sh
python/: pyproject.toml
python/setix_thread/: __init__.py  chain_tx_encoders.py
typescript/: README.md  package.json  tsconfig.json
typescript/src/: chain-tx-encoders.ts  index.ts  setix-thread.ts
