[project]
name = "setix-thread"
version = "0.0.9"
description = "Setix THREAD SDK — Python client library"
license = { text = "Apache-2.0" }
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "cbor2>=5.6.0",
    "cryptography>=42.0.0",
]

[project.urls]
"Repository" = "https://github.com/setix-ai/setix-sdk"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["setix_thread"]
